# shader_preprocessor_demo

./: Cargo.toml
src/: main.rs  model.wgsl  test.wgsl
