[package]
name = "naga_oil_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga_oil = "0.11.0"
naga = "0.14.2"
wgpu = { version = "0.18.0", features = ["naga"] }
pollster = "0.3.0"
bytemuck = { version = "1.4", features = ["derive"] }
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
futures-intrusive = "0.5.0"
